// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render CATEGORY_DISPLAY correctly with default value to N/A 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {
        "items": Array [
          Object {
            "name": "name1",
            "value": "value1",
          },
          Object {
            "name": "name2",
            "value": "value2",
          },
        ],
      },
      "id": "id",
      "type": "CATEGORY_DISPLAY",
      "values": Object {},
    }
  }
  eventHandler={[Function]}
>
  <DisplayStatus
    labels={
      Array [
        "name1",
        "name2",
      ]
    }
  >
    <DisplayStatus__Container>
      <div
        className="DisplayStatus__Container-jrDlkR DzKAF"
      >
        <DisplayStatus__ItemWrapper>
          <div
            className="DisplayStatus__ItemWrapper-edfiVv eBhrYw"
          >
            <P
              color="grayBase"
            >
              <Component
                className="P__P-KJbCR kHKeHO"
                color="grayBase"
              >
                <p
                  className="P__P-KJbCR kHKeHO"
                  color="grayBase"
                >
                  name1
                </p>
              </Component>
            </P>
            <div>
              <StatusLight
                color="grayDark"
              >
                <StatusLight__Svg
                  color="grayDark"
                  viewBox="0 0 20 20"
                >
                  <svg
                    className="StatusLight__Svg-IVkxE heGIpa"
                    color="grayDark"
                    viewBox="0 0 20 20"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="10"
                    />
                  </svg>
                </StatusLight__Svg>
              </StatusLight>
            </div>
          </div>
        </DisplayStatus__ItemWrapper>
        <DisplayStatus__ItemWrapper>
          <div
            className="DisplayStatus__ItemWrapper-edfiVv eBhrYw"
          >
            <P
              color="grayBase"
            >
              <Component
                className="P__P-KJbCR kHKeHO"
                color="grayBase"
              >
                <p
                  className="P__P-KJbCR kHKeHO"
                  color="grayBase"
                >
                  name2
                </p>
              </Component>
            </P>
            <div>
              <StatusLight
                color="grayDark"
              >
                <StatusLight__Svg
                  color="grayDark"
                  viewBox="0 0 20 20"
                >
                  <svg
                    className="StatusLight__Svg-IVkxE heGIpa"
                    color="grayDark"
                    viewBox="0 0 20 20"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="10"
                    />
                  </svg>
                </StatusLight__Svg>
              </StatusLight>
            </div>
          </div>
        </DisplayStatus__ItemWrapper>
      </div>
    </DisplayStatus__Container>
  </DisplayStatus>
</DataChannelAdapter>
`;

exports[`should render CATEGORY_DISPLAY correctly with first item 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {
        "items": Array [
          Object {
            "name": "name1",
            "value": "value1",
          },
          Object {
            "name": "name2",
            "value": "value2",
          },
        ],
      },
      "id": "id",
      "type": "CATEGORY_DISPLAY",
      "values": Object {
        "value": "value1",
      },
    }
  }
  eventHandler={[Function]}
>
  <DisplayStatus
    labels={
      Array [
        "name1",
        "name2",
      ]
    }
    value={0}
  >
    <DisplayStatus__Container>
      <div
        className="DisplayStatus__Container-jrDlkR DzKAF"
      >
        <DisplayStatus__ItemWrapper>
          <div
            className="DisplayStatus__ItemWrapper-edfiVv eBhrYw"
          >
            <P
              color="grayBase"
            >
              <Component
                className="P__P-KJbCR kHKeHO"
                color="grayBase"
              >
                <p
                  className="P__P-KJbCR kHKeHO"
                  color="grayBase"
                >
                  name1
                </p>
              </Component>
            </P>
            <div>
              <StatusLight
                color="success"
              >
                <StatusLight__Svg
                  color="success"
                  viewBox="0 0 20 20"
                >
                  <svg
                    className="StatusLight__Svg-IVkxE geyPxt"
                    color="success"
                    viewBox="0 0 20 20"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="10"
                    />
                  </svg>
                </StatusLight__Svg>
              </StatusLight>
            </div>
          </div>
        </DisplayStatus__ItemWrapper>
        <DisplayStatus__ItemWrapper>
          <div
            className="DisplayStatus__ItemWrapper-edfiVv eBhrYw"
          >
            <P
              color="grayBase"
            >
              <Component
                className="P__P-KJbCR kHKeHO"
                color="grayBase"
              >
                <p
                  className="P__P-KJbCR kHKeHO"
                  color="grayBase"
                >
                  name2
                </p>
              </Component>
            </P>
            <div>
              <StatusLight
                color="grayDark"
              >
                <StatusLight__Svg
                  color="grayDark"
                  viewBox="0 0 20 20"
                >
                  <svg
                    className="StatusLight__Svg-IVkxE heGIpa"
                    color="grayDark"
                    viewBox="0 0 20 20"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="10"
                    />
                  </svg>
                </StatusLight__Svg>
              </StatusLight>
            </div>
          </div>
        </DisplayStatus__ItemWrapper>
      </div>
    </DisplayStatus__Container>
  </DisplayStatus>
</DataChannelAdapter>
`;

exports[`should render CATEGORY_DISPLAY correctly with second item 1`] = `
<DataChannelAdapter
  dataChannelProps={
    Object {
      "format": Object {
        "items": Array [
          Object {
            "name": "name1",
            "value": "value1",
          },
          Object {
            "name": "name2",
            "value": "value2",
          },
        ],
      },
      "id": "id",
      "type": "CATEGORY_DISPLAY",
      "values": Object {
        "value": "value2",
      },
    }
  }
  eventHandler={[Function]}
>
  <DisplayStatus
    labels={
      Array [
        "name1",
        "name2",
      ]
    }
    value={1}
  >
    <DisplayStatus__Container>
      <div
        className="DisplayStatus__Container-jrDlkR DzKAF"
      >
        <DisplayStatus__ItemWrapper>
          <div
            className="DisplayStatus__ItemWrapper-edfiVv eBhrYw"
          >
            <P
              color="grayBase"
            >
              <Component
                className="P__P-KJbCR kHKeHO"
                color="grayBase"
              >
                <p
                  className="P__P-KJbCR kHKeHO"
                  color="grayBase"
                >
                  name1
                </p>
              </Component>
            </P>
            <div>
              <StatusLight
                color="grayDark"
              >
                <StatusLight__Svg
                  color="grayDark"
                  viewBox="0 0 20 20"
                >
                  <svg
                    className="StatusLight__Svg-IVkxE heGIpa"
                    color="grayDark"
                    viewBox="0 0 20 20"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="10"
                    />
                  </svg>
                </StatusLight__Svg>
              </StatusLight>
            </div>
          </div>
        </DisplayStatus__ItemWrapper>
        <DisplayStatus__ItemWrapper>
          <div
            className="DisplayStatus__ItemWrapper-edfiVv eBhrYw"
          >
            <P
              color="grayBase"
            >
              <Component
                className="P__P-KJbCR kHKeHO"
                color="grayBase"
              >
                <p
                  className="P__P-KJbCR kHKeHO"
                  color="grayBase"
                >
                  name2
                </p>
              </Component>
            </P>
            <div>
              <StatusLight
                color="success"
              >
                <StatusLight__Svg
                  color="success"
                  viewBox="0 0 20 20"
                >
                  <svg
                    className="StatusLight__Svg-IVkxE geyPxt"
                    color="success"
                    viewBox="0 0 20 20"
                  >
                    <circle
                      cx="10"
                      cy="10"
                      r="10"
                    />
                  </svg>
                </StatusLight__Svg>
              </StatusLight>
            </div>
          </div>
        </DisplayStatus__ItemWrapper>
      </div>
    </DisplayStatus__Container>
  </DisplayStatus>
</DataChannelAdapter>
`;
